# packtemplater

./: README.md  demo.py  pyproject.toml
packtemplater/: __init__.py  mod1.py
packtemplater/submod/: __init__.py  submod.py
